--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <title>Velemed             </title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="default/default.css"><!--[if lt IE 9]>
+    <link rel="stylesheet" href="css/styles-ie.css"><![endif]--><!--[if lt IE 8]>
+    <link rel="stylesheet" href="css/styles-ie7.css"><![endif]-->
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.hashchange.min.js"></script>
     <script src="js/jquery.easytabs.min.js"></script>
+    <script src="js/jquery.nivo.slider.pack.js"></script>
     <script src="js/scripts.js"></script><!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script><![endif]-->
   </head>
@@ -60,37 +64,43 @@
         </nav>
       </div>
     </header>
-    <div id="slider">
-      <!-- imagenes-->
-    </div>
-    <section id="interna">
-      <div class="container">
-        <h1>LABORATORIOS</h1>
-        <!-- easy-tabs-->
-        <div id="tabs">
-          <h2>COMUNIDAD MÉDICA</h2>
-          <ul>
-            <li><a href="#menu-01">Tipos de Exámenes</a></li>
-            <li><a href="#menu-02">Laboratorios Quimicos</a></li>
-            <li><a href="#menu-03">Cursos de Actualización</a></li>
-          </ul><br clear="all">
-          <article id="menu-01"> 
-            <h3>Tipos de Exámenes</h3><img src="http://placehold.it/960x150" class="float-center">
-            <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
-            <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
-          </article>
-          <article id="menu-02">
-            <h3>Laboratorios Quimicos</h3><img src="http://placehold.it/300x200" class="float-left">
-            <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
-            <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
-          </article>
-          <article id="menu-03">
-            <h3>Cursos de Actualización</h3><img src="http://placehold.it/300x200" class="float-right">
-            <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
-            <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
-          </article>
+    <div id="slider"><img src="http://placehold.it/1200x600/F3E5BA"><img src="http://placehold.it/1200x600/DDF4A4"></div>
+    <section id="home-01">
+      <article class="container">
+        <h1>Bienvenido a Velemed</h1>
+        <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
+        <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
+      </article>
+    </section>
+    <section id="home-02">
+      <article class="container">
+        <div><img src="http://placehold.it/468x400/DDF4A4"></div>
+        <div class="last">
+          <h2>Laboratorio </h2>
+          <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
+          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
         </div>
-      </div>
+      </article>
+    </section>
+    <section id="home-03">
+      <article class="container">
+        <div>
+          <h2>Laboratorio</h2>
+          <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
+          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
+        </div>
+        <div class="last"><img src="http://placehold.it/468x400/DDF4A4"></div>
+      </article>
+    </section>
+    <section id="home-04">
+      <article class="container">
+        <div><img src="http://placehold.it/468x400/DDF4A4"></div>
+        <div class="last">
+          <h2>Laboratorio </h2>
+          <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps. </p>
+          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
+        </div>
+      </article>
     </section>
     <footer>
       <div class="container">
