--- a/contacto.html
+++ b/contacto.html
@@ -6,9 +6,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="default/default.css"><!--[if lt IE 9]>
+    <link rel="stylesheet" href="css/styles-ie.css"><![endif]--><!--[if lt IE 8]>
+    <link rel="stylesheet" href="css/styles-ie7.css"><![endif]-->
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.hashchange.min.js"></script>
     <script src="js/jquery.easytabs.min.js"></script>
+    <script src="js/jquery.nivo.slider.pack.js"></script>
     <script src="js/scripts.js"></script><!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script><![endif]-->
   </head>
@@ -60,21 +64,19 @@
         </nav>
       </div>
     </header>
-    <div id="slider">
-      <!-- imagenes-->
-    </div>
+    <div id="slider"><img src="http://placehold.it/1200x600/F3E5BA"><img src="http://placehold.it/1200x600/DDF4A4"></div>
     <section id="interna">
       <div class="container">
-        <h1>Contacto</h1>
+        <h1>Contacto </h1>
         <p>Para nosotros es muy importante tu opinión. Por lo mismo nos ponemos a tus órdenes para resolver cualquier tipo de duda o aclaración, o cualquier tipo de comentario al respecto.</p>
         <div class="form">
-          <label> <span>Nombre:</span>
+          <label> <span>Nombre: </span>
             <input type="text">
           </label>
           <label> <span>Empresa:</span>
             <input type="text">
           </label>
-          <label> <span>E-mail:</span>
+          <label> <span>E-mail: </span>
             <input type="text">
           </label>
           <label> <span>Teléfono:</span>
