Fuente corrupta. Boton arriba

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="default/default.css"><!--[if lt IE 9]>
     <link rel="stylesheet" href="css/styles-ie.css"><![endif]--><!--[if lt IE 8]>
-    <link rel="stylesheet" href="css/styles-ie7.css"><![endif]-->
+    <link rel="stylesheet" href="css/styles-ie7.css">
+    <link rel="stylesheet" href="css/font-awesome-ie7.css"><![endif]-->
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.hashchange.min.js"></script>
     <script src="js/jquery.easytabs.min.js"></script>
@@ -67,7 +68,7 @@
     <div id="slider"><img src="http://placehold.it/1200x600/F3E5BA"><img src="http://placehold.it/1200x600/DDF4A4"></div>
     <section id="home-01">
       <article class="container">
-        <h1>Bienvenido a Velemed</h1>
+        <h1>Bienvenido a Velemed </h1>
         <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
         <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
       </article>
@@ -78,7 +79,7 @@
         <div class="last">
           <h2>Laboratorio </h2>
           <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
-          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
+          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.<a href="#" class="link-contacto">contacto</a></p>
         </div>
       </article>
     </section>
@@ -87,7 +88,7 @@
         <div>
           <h2>Laboratorio</h2>
           <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.</p>
-          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
+          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.<a href="#" class="link-contacto">contacto</a></p>
         </div>
         <div class="last"><img src="http://placehold.it/468x400/DDF4A4"></div>
       </article>
@@ -98,7 +99,7 @@
         <div class="last">
           <h2>Laboratorio </h2>
           <p>Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps. </p>
-          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.</p>
+          <p>Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.<a href="#" class="link-contacto">contacto</a></p>
         </div>
       </article>
     </section>
