--- a/contacto.html
+++ b/contacto.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <title>Velemed             </title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="default/default.css"><!--[if lt IE 9]>
     <link rel="stylesheet" href="css/styles-ie.css"><![endif]--><!--[if lt IE 8]>
-    <link rel="stylesheet" href="css/styles-ie7.css"><![endif]-->
+    <link rel="stylesheet" href="css/styles-ie7.css">
+    <link rel="stylesheet" href="css/font-awesome-ie7.css"><![endif]-->
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.hashchange.min.js"></script>
     <script src="js/jquery.easytabs.min.js"></script>
