--- a/contacto.html
+++ b/contacto.html
@@ -6,61 +6,63 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="default/default.css"><!--[if lt IE 9]>
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css"><!--[if lt IE 9]>
     <link rel="stylesheet" href="css/styles-ie.css"><![endif]--><!--[if lt IE 8]>
     <link rel="stylesheet" href="css/styles-ie7.css">
     <link rel="stylesheet" href="css/font-awesome-ie7.css"><![endif]-->
     <script src="js/jquery-1.8.3.min.js"></script>
     <script src="js/jquery.hashchange.min.js"></script>
     <script src="js/jquery.easytabs.min.js"></script>
-    <script src="js/jquery.nivo.slider.pack.js"></script>
+    <script src="js/jquery.slides.min.js"></script>
+    <script src="js/fancybox/jquery.fancybox.pack.js"></script>
+    <script src="js/fancybox/helpers/jquery.fancybox-media.js"></script>
     <script src="js/scripts.js"></script><!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script><![endif]-->
   </head>
   <body>
     <header>
       <div class="container">
-        <div id="logo"><img src="img/logo-velemed.png" width="311" height="148"></div>
+        <div id="logo"><a href="index.html"></a><img src="img/logo-velemed.png" width="311" height="148"></div>
         <nav>
           <ul>
-            <li><a href="">Nosotros</a>
+            <li><a href="page.html">Nosotros</a>
               <ul>
-                <li><a href="">Filosofía</a></li>
-                <li><a href="">Valores</a></li>
-                <li><a href="">Responsabilidad Social</a></li>
-                <li><a href="">Reconocimientos</a></li>
+                <li><a href="page.html">Filosofía</a></li>
+                <li><a href="page.html">Valores</a></li>
+                <li><a href="page.html">Responsabilidad Social</a></li>
+                <li><a href="page.html">Reconocimientos</a></li>
               </ul>
             </li>
-            <li><a href="">Gobierno</a>
+            <li><a href="page.html">Gobierno</a>
               <ul>
-                <li><a href="">Presentación </a></li>
-                <li><a href="">Implementaciones</a></li>
-                <li><a href="">Unidades Móviles</a></li>
-                <li><a href="">Casos de Éxito</a></li>
-                <li><a href="">Galería</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="page.html">Presentación </a></li>
+                <li><a href="page.html">Implementaciones</a></li>
+                <li><a href="page.html">Unidades Móviles</a></li>
+                <li><a href="page.html">Casos de Éxito</a></li>
+                <li><a href="page.html">Galería</a></li>
+                <li><a href="page.html">Contacto</a></li>
               </ul>
             </li>
-            <li><a href="">Empresas</a>
+            <li><a href="page.html">Empresas</a>
               <ul>
-                <li><a href="">Presentación </a></li>
-                <li><a href="">Medicina Preventiva</a></li>
-                <li><a href="">Pruebas Rápidas</a></li>
-                <li><a href="">Casos de Éxito</a></li>
-                <li><a href="">Galería</a></li>
-                <li><a href="">Contacto</a></li>
+                <li><a href="page.html">Presentación </a></li>
+                <li><a href="page.html">Medicina Preventiva</a></li>
+                <li><a href="page.html">Pruebas Rápidas</a></li>
+                <li><a href="page.html">Casos de Éxito</a></li>
+                <li><a href="page.html">Galería</a></li>
+                <li><a href="page.html">Contacto</a></li>
               </ul>
             </li>
-            <li><a href="">Laboratorios Clinicos</a>
+            <li><a href="page.html">Laboratorios Clinicos</a>
               <ul>
-                <li><a href="">Público </a></li>
-                <li><a href="">Sucursales</a></li>
-                <li><a href="">Comunidad Médica</a></li>
-                <li><a href="">Bolsa de Trabajo</a></li>
-                <li><a href="">Galería</a></li>
+                <li><a href="page.html">Público </a></li>
+                <li><a href="page.html">Sucursales</a></li>
+                <li><a href="page.html">Comunidad Médica</a></li>
+                <li><a href="page.html">Bolsa de Trabajo</a></li>
+                <li><a href="page.html">Galería</a></li>
               </ul>
             </li>
-            <li><a href="">Intranet</a></li>
+            <li class="intranet"><a href="page.html">Intranet</a></li>
           </ul>
         </nav>
       </div>
